# gemini-podcast

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
examples/: from_url.py  minimal.py  upload_to_gcs.py
playground/: App.tsx  index.html  index.tsx  pipeline.ts  voices.ts
src/gemini_podcast/: __init__.py  encode.py  pipeline.py  script_gen.py  synthesize.py  types.py  voices.py
tests/: test_chunking.py  test_parse_dialogue.py  test_voices.py
